--- a/app-menu-with-lock-screen/rootv2.html
+++ b/app-menu-with-lock-screen/rootv2.html
@@ -15,7 +15,7 @@
                     </button>
                     <script nomodule data-settings='{
                         "hydratingTransform": {
-                            "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "closest|[itemscope].beDecorated.scoped.scope.userStatus"}}]
+                            "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "$$.scopeContainer.scope.userStatus"}}]
                         },
                         "transform": {
                             "buttonE": [{"id": "id"}],
