--- a/app-menu-with-lock-screen/rootv1.html
+++ b/app-menu-with-lock-screen/rootv1.html
@@ -1042,7 +1042,7 @@
                 </button>
                 <script data-settings='{
                     "hydratingTransform": {
-                        "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "$$.scopeContainer.scope.userStatus"}}]
+                        "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "$$.itemscope.userStatus"}}]
                     },
                     "transform": {
                         "buttonE": [{"id": "id"}],
