--- a/app-menu-with-lock-screen/rootv1.html
+++ b/app-menu-with-lock-screen/rootv1.html
@@ -1027,7 +1027,7 @@
                   }'></script>
             </template>
             <template id=back-ground>
-                <div id=app-background>
+                <div nonce id=app-background>
                     <div id=app-background-image class="background-image">
                 </div>
                 <script data-settings='{
