--- a/css-minesweeper/demo/dev.html
+++ b/css-minesweeper/demo/dev.html
@@ -7,18 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <css-minesweeper be-importing=co-depends/css-minesweeper/root.html></css-minesweeper>
+    <css-minesweeper enh-by-be-importing=co-depends/css-minesweeper/root.html></css-minesweeper>
     <script type=importmap>
         {
             "imports": {
-                
+                "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
-                "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
+                "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
-                "be-headed/": "../../node_modules/be-headed/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
