--- a/parallax-flip-card/demo/dev.html
+++ b/parallax-flip-card/demo/dev.html
@@ -42,7 +42,7 @@
         }
     </style>
     <div class="cols">
-        <co-depends-parallax-flip-card be-importing='co-depends/parallax-flip-card/root.html' id="first">
+        <co-depends-parallax-flip-card enh-by-be-importing='co-depends/parallax-flip-card/root.html' id="first">
             <div slot="front">
                 <p>Diligord</p>
                 <span>Lorem ipsum</span>
@@ -86,15 +86,15 @@
     <script type=importmap>
         {
             "imports": {
-                
+                "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
-                "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
+                "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
+                "be-one-and-only/": "../../node_modules/be-one-and-only/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
                 "trans-render/": "../../node_modules/trans-render/",
