--- a/parallax-flip-card/root.html
+++ b/parallax-flip-card/root.html
@@ -150,18 +150,18 @@
                 </div>
             </div>
         </div>
-        <be-hive></be-hive>
-        <script id=shared-co-depends-parallax-flip-card nomodule be-having='{
-            "make": {
-                ":host":{
-                    "be": "definitive"
-                }
-            }
-        }'>
-            //export const make=['co-depends/parallax-flip-card/make.js', 'https://esm.run/co-depends@0.0.24/parallax-flip-card/make.js'];
-            export const definitive = {
-                impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.90']
-            };
-        </script>
+        <be-hive enh-b-be-definitive></be-hive>
+        <template be-active>
+            <script data-version="0.0.100" id="be-definitive/be-definitive.js"></script>
+        </template>
     <!--end--><!--end--></template>
 </parallax-flip-card>
+
+<script type=module>
+    if(customElements.get('be-importing') === undefined){
+        import('be-importing/be-importing.js').catch(err => {
+            console.debug(err);
+            import('https://esm.run/be-importing@0.0.63');
+        });
+    }
+</script>
