--- a/responsive-honeycomb/demo/dev.html
+++ b/responsive-honeycomb/demo/dev.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <co-depends-responsive-honeycomb be-importing=co-depends/responsive-honeycomb/root.html/>
+    <co-depends-responsive-honeycomb enh-by-be-importing=co-depends/responsive-honeycomb/root.html/>
         <div>
             <img src="https://source.unsplash.com/random/1" alt="Diseño exclusivo">
             <img src="https://source.unsplash.com/random/2" alt="Impermeables">
@@ -22,13 +22,12 @@
     <script type=importmap>
         {
             "imports": {
-                
+                "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
-                "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
+                "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-written/": "../../node_modules/be-written/",
