--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <animated-star-rating be-importing=co-depends/animated-star-rating/root.html></animated-star-rating>
+    <animated-star-rating enh-by-be-importing=co-depends/animated-star-rating/root.html></animated-star-rating>
     
     <button type=button onclick='setRating()'>Set rating</button>
 
@@ -16,11 +16,11 @@
     <script type=importmap>
         {
             "imports": {
-                
+                "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
                 "be-bound/": "../../node_modules/be-bound/",
-                "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
+                "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
                 "be-having/": "../../node_modules/be-having/",
