--- a/animated-star-rating/demo/dev.html
+++ b/animated-star-rating/demo/dev.html
@@ -18,13 +18,10 @@
             "imports": {
                 "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
-                "be-bound/": "../../node_modules/be-bound/",
+                "be-bound/": "../../be-bound/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-enhanced/": "../../node_modules/be-enhanced/",
-                "be-exportable/": "../../node_modules/be-exportable/",
-                "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
-                "be-headed/": "../../node_modules/be-headed/",
+                "be-exportable/": "../../be-exportable/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
