--- a/animated-star-rating/root.html
+++ b/animated-star-rating/root.html
@@ -288,7 +288,7 @@
                     }
                 }
             </style>
-            <form part=rating class="rating" be-bound='[".rating.value", "rating"]'>
+            <form part=rating class="rating" be-bound='[[".rating.value", "rating"]]'>
                 <div part=rating-stars class="rating__stars">
                     <input id="rating-1" class="rating__input rating__input-1" type="radio" name="rating" value="1">
                     <input id="rating-2" class="rating__input rating__input-2" type="radio" name="rating" value="2">
@@ -432,19 +432,15 @@
                     <p part=rating-display class="rating__display" data-rating="5" hidden>Excellent</p>
                 </div>
             </form>
-            <be-hive enh-by-definitive='{
-                "scriptRef"
-            }'></be-hive>
-            <script nomodule id="shared-co-depends"></script>
-            <script id=shared-co-depends-animated-star-rating nomodule be-having href=make.ts>
-                export const make=['co-depends/animated-star-rating/make.js', 'https://esm.run/co-depends@0.0.24/animated-star-rating/make.js'];
-                export const definitive = {
-                    impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.90']
-                };
-                export const bound = {
-                    impl: ['be-bound/be-bound.js', 'https://esm.run/be-bound@0.0.5']
-                }
-            </script>
+            <be-hive></be-hive>
+            <script src="config.js" be-definitive='{
+                "complexConfig": "config"
+            }' nomodule id="shared-co-depends"></script>
+            <template be-active>
+                <script data-version="0.0.101" id="be-definitive/be-definitive.js"></script>
+                <script data-version="0.0.8" id="be-bound/be-bound.js"></script>
+            </template>
+
             <!--end--><!--end-->
         </div>
     </template>
