--- a/sidebar-interaction/demo/dev.html
+++ b/sidebar-interaction/demo/dev.html
@@ -7,22 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <sidebar-interaction be-importing=co-depends/sidebar-interaction/root.html></sidebar-interaction>
+    <sidebar-interaction enh-by-be-importing=co-depends/sidebar-interaction/root.html></sidebar-interaction>
     <script type=importmap>
         {
             "imports": {
-                
+                "be-active/": "../../node_modules/be-active/",
                 "be-based/": "../../node_modules/be-based/",
                 "be-bound/": "../../node_modules/be-bound/",
-                "be-decorated/": "../../node_modules/be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
+                "be-enhanced/": "../../node_modules/be-enhanced/",
                 "be-exportable/": "../../node_modules/be-exportable/",
-                "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
-                "be-headed/": "../../node_modules/be-headed/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
-                "be-one-and-only/": "../../node_modules/be-one-and-only/",
+                "be-it/": "../../node_modules/be-it/",
+                "be-linked/": "../../node_modules/be-linked/",
+                "be-propagating/": "../../node_modules/be-propagating/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
                 "trans-render/": "../../node_modules/trans-render/",
